Disable clutter accessibility support

Right now, clutter-gtk applications are basically behaving
as a gtk application with some clutter effects, so the accessibility
support required is the one provided by gtk. We disable loading
clutter accessibility support in order to not override gtk
accessibility support.

https://bugzilla.gnome.org/show_bug.cgi?id=691468